# sandbox-vue-django

backend/: pyproject.toml
backend/accounts/: models.py  serializers.py
backend/accounts/migrations/: 0001_initial.py
backend/apiv1/: serializers.py  views.py
backend/config/: settings.py  urls.py
backend/shop/: models.py
backend/shop/migrations/: 0001_initial.py
frontend/: index.html  package.json
frontend/src/: main.js
frontend/src/assets/: main.css
frontend/src/components/: AppAlert.vue  GlobalHeader.vue  GlobalMessage.vue
frontend/src/layouts/: GlobalLayout.vue
frontend/src/pages/: BookPage.vue  DummyPage.vue  HomePage.vue  LoginPage.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  message.js
